--- a/style.css
+++ b/style.css
@@ -9,6 +9,16 @@ body {
   font-family: Arial, sans-serif;
   text-align: center;
   background-color: #dddddd;
+  position: relative;
+}
+
+.popup {
+  position: absolute;
+  width: 300px;
+  height: 300px;
+  background-color: #fff;
+  border: 1px solid #ccc;
+  padding: 20px;
 }
 
 .board {
